# MindViewer

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.md  MindViewer.pro  README.md  curve.cpp  curve.h  dataparser.cpp  dataparser.h  icd.h  indicator.cpp  indicator.h  localfile.cpp  localfile.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  qwt.cmake  qwt.pri  resource.qrc  retriver.h  retriver.ui  simulator.cpp  simulator.h  vcpkg.json  windows_metadata.rc.in
.github/workflows/: release-windows.yml
MindViewer/: MindViewer.pro  curve.cpp  curve.h  curves.cpp  curves.h  curves.ui  dataparser.cpp  dataparser.h  icd.h  indicator.cpp  indicator.h  localfile.cpp  localfile.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  resource.qrc  retriver.cpp  retriver.h  simulator.cpp  simulator.h
MindViewer/MindViewer/: BaseStimulation.h  MindViewer.pro  basestimulation.h  simulator.cpp  simulator.h
MindViewer/tests/: tests.pro
include/: dataparser.h  icd.h  indicator.h  localfile.h
installer/config/: config.xml  controlscript.qs
resource/qss/: mindviewer.qss
src/: Battery.qml  Dial.qml  MindViewer.pro  WIFI.qml  common.h  curve.cpp  curves.cpp  curves.h  curvescommon.cpp  curvescommon.h  curvescommon.ui  eegdata.cpp  eegdata.h  generator.cpp  generator.h  indicator.cpp  localfile.cpp  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mindviewer.pro  onecurve.cpp  onecurve.h  qml.qrc  resources.qrc  retriver.cpp  retriver.h  retriver.ui  simgen.cpp  simgen.h
src/qml/: Battery.qml  Dial.qml  DialBackground.qml  WIFI.qml  main.qml
test/: main.cpp  mindviewertest.cpp  mindviewertest.h  test.pro
ui/: mainwidget.ui
